base_control_ros2/log/build_2023-01-03_15-05-16/base_control/stderr.log
  File "/home/hrabi/base_control_ros2/install/base_control/lib/python3.10/site-packages/base_control/controller.py", line 124
    self.optitrack = optitrack   60
                                 ^^
SyntaxError: invalid syntax

